# cppcheck

./: .selfcheck_suppressions  AUTHORS  CONTRIBUTING.md  Makefile  createrelease  readme.md  readmeja.md  releasenotes.txt  selfcheck.sh  selfcheck_san.sh
addons/: README.md
cfg/: gtk.cfg  microsoft_gsl.cfg  qt.cfg  selinux.cfg  std.cfg
cli/: CMakeLists.txt  cmdlineparser.cpp  cppcheckexecutor.cpp
cmake/: compilerDefinitions.cmake  options.cmake  printInfo.cmake
gui/: CMakeLists.txt  codeeditor.h  gui.pro  librarydialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectfile.cpp  projectfile.h  projectfile.ui  projectfiledialog.cpp  projectfiledialog.h  resultsview.cpp  resultsview.h  statsdialog.cpp  threadresult.h
htmlreport/: setup.py
lib/: addoninfo.cpp  analyzer.h  astutils.cpp  astutils.h  checkassert.cpp  checkassert.h  checkautovariables.cpp  checkbufferoverrun.cpp  checkbufferoverrun.h  checkclass.cpp  checkclass.h  checkcondition.cpp  checkcondition.h  checkers.cpp  checkfunctions.cpp  checkio.cpp  checkio.h  checkleakautovar.cpp  checkmemoryleak.cpp  checkmemoryleak.h  checknullpointer.cpp  checknullpointer.h  checkother.cpp  checkother.h  checkstl.cpp  checkstl.h  checkuninitvar.cpp  checkunusedfunctions.cpp  checkunusedfunctions.h  checkunusedvar.cpp  checkvaarg.cpp  config.h  cppcheck.cpp  cppcheck.h  errorlogger.cpp  errorlogger.h  filesettings.h  forwardanalyzer.cpp  importproject.cpp  importproject.h  (+27 more)
man/: manual-ja.docbook  manual-premium.md  manual.md
mayhem/: Dockerfile
test/: fixture.h  helpers.cpp  options.cpp  testassert.cpp  testastutils.cpp  testautovariables.cpp  testbufferoverrun.cpp  testclass.cpp  testcmdlineparser.cpp  testcondition.cpp  testconstructors.cpp  testcppcheck.cpp  testerrorlogger.cpp  testfunctions.cpp  testgarbage.cpp  testimportproject.cpp  testincompletestatement.cpp  testio.cpp  testmemleak.cpp  testnullpointer.cpp  testother.cpp  testpath.cpp  testpreprocessor.cpp  testprocessexecutor.cpp  testsimplifytemplate.cpp  testsimplifytokens.cpp  testsimplifytypedef.cpp  testsimplifyusing.cpp  testsingleexecutor.cpp  teststl.cpp  testsuppressions.cpp  testsymboldatabase.cpp  testthreadexecutor.cpp  testtimer.cpp  testtokenize.cpp  testuninitvar.cpp  testunusedfunctions.cpp  testunusedvar.cpp  testutils.cpp  testvalueflow.cpp  (+1 more)
tools/: donate_cpu_lib.py  test-my-pr.py
(+50 files in other folders)
